# PSDto3D

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  README_Reported Bugs.md  remove_temp_files.bat  test.txt
projects/: PSDto3D.sln  psd2m_maya_plugin.sln
projects/psd2m_core/: psd2m_core.manifest  psd2m_core.vcxproj  psd2m_core.vcxproj.filters
projects/psd2m_fbx/: psd2m_fbx.filters  psd2m_fbx.vcxproj
projects/psd2m_maya_plugin/: psd2m_maya_plugin.vcxproj  psd2m_maya_plugin.vcxproj.filters
projects/psd2m_mesh_generator/: psd2m_mesh_generator.vcxproj  psd2m_mesh_generator.vcxproj.filters
projects/psd2m_psd_reader/: psd2m_psd_reader.vcxproj  psd2m_psd_reader.vcxproj.filters
projects/psd2m_unreal_plugin/: psd2m_unreal_plugin.vcxproj  psd2m_unreal_plugin.vcxproj.filters
projects/psd2m_util/: psd2m_util.vcxproj  psd2m_util.vcxproj.filters
psd2m_core/: CHANGES.md  README.md
psd2m_core/docs/: PSD to 3D Tool Tips.rtf
psd2m_core/lib/: RectangleBinPack.lib
psd2m_core/shelf/Maya2022/: shelf_PSDto3D.mel
psd2m_core/shelf/Maya2023/: shelf_PSDto3D.mel
psd2m_core/shelf/Maya2024/: shelf_PSDto3D.mel
psd2m_core/src/: IPluginOutput.h  mainWindowCmd.cpp  mainWindowCmd.h  mayaStub.h  outputs.h  parameters.cpp  parameters.h  pluginController.cpp  pluginController.h  psd2m_core.rc  qtProgress.cpp
psd2m_extension/: CONTRIBUTORS.md  INSTALL.md  README.md
psd2m_extension/PsdExporterCC/: .project  build_extension_cc.bat
psd2m_extension/PsdExporterCS6/: build_extension_cs6.bat
psd2m_extension/install_tool/: install_plugin.bat
psd2m_installer/: CONTRIBUTORS.md  INSTALL.md  README.md  build_deployment_unreal.bat  build_installer_blender.bat  build_installer_fbx.bat  build_installer_maya.bat  build_version.bat  findreplace.c  psd2fbx_full.iss  psd2m_full.iss  psd2m_lite.iss  psd_ext.iss
psd2m_installer/InnoSetup561/: ISetup.chw
psd2m_installer/InnoSetup602/: ISetup.chw
psd2m_libpng/: png.h  pngwrite.c
psd2m_maya_plugin/: CONTRIBUTORS.md  README.md
psd2m_maya_plugin/conf/: language_french.ini
psd2m_maya_plugin/docs/: Online Documentation.url
psd2m_maya_plugin/include/: MaxRectsBinPack.h  png.h
psd2m_maya_plugin/lib/: libpng_static.lib  zlib_static.lib
psd2m_maya_plugin/setup/: CMakeLists.txt
psd2m_maya_plugin/setup/modules/: FindMAYA.cmake
psd2m_maya_plugin/src/: CMakeLists.txt  IControllerUpdate.h  IPluginOutput.h  compLayers.h  mainWindowCmd.cpp  mainWindowCmd.h  mayaUtils.h  outputs.h  parameters.cpp  parameters.h  pluginController.cpp  pluginController.h  psd2m_maya_plugin.rc  qtProgress.cpp  qtProgress.h  resource.h
psd2m_maya_plugin/src/fbx/: FbxCommon.h  FbxMain.cpp
psd2m_maya_plugin/src/interface/: licensingWidget.cpp  licensingWidget.ui  toolWidget.cpp  toolWidget.h  toolWidget.ui  toolWidgetLocalization.h  toolWidgetLocalization_english.cpp  toolWidgetLocalization_french.cpp  toolWidget_alternate.ui  ui_wrapper.h
psd2m_maya_plugin/src/licensing/: install_six.txt  license_zfighter.txt  public_key_PSDto3D_pro.txt  public_key_PSDtoFBX.txt  salt_key_PSDtoFBX.txt  salt_key_zfighter.txt
psd2m_maya_plugin/src/maya_mesh/: editorComponentGenerator.cpp  editorComponentGenerator.h  mayaMeshConvertor.cpp  mayaMeshConvertor.h
psd2m_maya_plugin/src/resources/: resource.h
psd2m_maya_plugin/src/scene_controller/: meshGeneratorController.cpp  meshGeneratorController.h  sceneController.cpp  sceneController.h  sceneControllerCache.cpp  sceneControllerCache.h
psd2m_maya_plugin/src/texture_exporter/: lodepng.cpp  lodepng.h  textureExporter.cpp  textureExporter.h
psd2m_maya_plugin/src/unreal/: some_module.cpp.obj.response  unrealEditorPlugin.h  unrealEditorPluginCommands.h  unrealmain.cpp  unrealmain.h
psd2m_maya_plugin/src/unreal/deploy/: INSTRUCTIONS.txt
psd2m_maya_plugin/src/unreal/deploy/PSDtoUnreal/: PSDtoUnreal.uplugin
psd2m_maya_plugin/src/unreal/deploy/PSDtoUnreal/Binaries/Win64/: UnrealEditor.modules
psd2m_maya_plugin/src/unreal/deploy/PSDtoUnreal/Content/Assets/Materials/PsdMaster/: M_PsdMaster.uasset
psd2m_maya_plugin/src/unreal/deploy/PSDtoUnreal/Content/Assets/Materials/PsdMaster/Assets/: CurveAtlas_TonemappingCorrection.uasset  MF_NormalFromBaseColor.uasset  T_Black_sRGB.uasset  T_FlatNormal.uasset
psd2m_maya_plugin/src/unreal/deploy/PSDtoUnreal/Resources/: Icons_testing_v01_PART1.PSD
psd2m_mesh_generator/: CONTRIBUTORS.md  README.md
psd2m_mesh_generator/setup/: CMakeLists.txt
psd2m_mesh_generator/src/: CMakeLists.txt
psd2m_mesh_generator/src/mesh_generator/: dataMesh.cpp  dataMesh.h
psd2m_mesh_generator/src/mesh_generator/curve_mesh/: bezier.cpp  bezier.h  curve.cpp  curve.h  curveData.cpp  curveData.h  curveMeshGenerator.cpp  curveMeshGenerator.h  curveNode.cpp  curveNode.h
psd2m_mesh_generator/src/mesh_generator/delaunay_mesh/: delaunayAlgo.cpp  delaunayAlgo.h  delaunayGeom.cpp  delaunayGeom.h  delaunayMesh.cpp  delaunayMesh.h
psd2m_mesh_generator/src/mesh_generator/influence_mesh/: influenceMesh.cpp  influenceMesh.h  meshFace.cpp  meshFace.h
psd2m_mesh_generator/src/mesh_generator/linear_mesh/: bezierCurve.cpp  bezierCurve.h  boundingBox.h  linearMesh.cpp  linearMesh.h
psd2m_psd_reader/: CONTRIBUTORS.md  README.md
psd2m_psd_reader/setup/: CMakeLists.txt
psd2m_psd_reader/src/: CMakeLists.txt
psd2m_psd_reader/src/psd_reader/: colorModeReader.cpp  colorModeReader.h  headerReader.cpp  headerReader.h  imageDataReader.cpp  imageDataReader.h  imageResourceReader.cpp  imageResourceReader.h  layerAndMaskReader.cpp  layerAndMaskReader.h  progress.h  psdReader.cpp  psdReader.h
psd2m_unreal/: .gitignore  HostProject.uproject  INSTRUCTIONS.txt  prepare_all.bat  prepare_headers.bat  prepare_project.bat  prepare_solution.bat
psd2m_unreal/Source/: HostProject.Target.cs  HostProjectEditor.Target.cs
psd2m_util/: CONTRIBUTORS.md
psd2m_util/setup/: CMakeLists.txt
psd2m_util/src/: CMakeLists.txt
psd2m_util/src/util/: bitmap.h  bounds_2D.cpp  bounds_2D.h  helpers.h  math_2D.cpp  math_2D.h  progressJob.h  readerWriterLock.h  threadpool.cpp  threadpool.h  utils.cpp  utils.h  vectorialPath.h
(+120 files in other folders)
