cmake_minimum_required(VERSION 3.1)

PROJECT(PSD23D)
SET(PROJECT_VERSION_PLUGIN dev)
SET(PROJECT_VERSION_PSD_READER dev)
SET(PROJECT_VERSION_MESH_GENERATOR dev)
SET(PROJECT_VERSION_UTIL dev)

SET(TARGET_NAME_PLUGIN PSD23D)
SET(TARGET_NAME_PSD_READER psd2m_psd_reader)
SET(TARGET_NAME_MESH_GENERATOR psd2m_mesh_generator)
SET(TARGET_NAME_UTIL psd2m_util)

SET(LIBRARY_NAME_PSD_READER psd_reader)
SET(LIBRARY_NAME_MESH_GENERATOR mesh_generator)
SET(LIBRARY_NAME_UTIL util)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/modules)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

ADD_SUBDIRECTORY(../src ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME_PLUGIN})
ADD_SUBDIRECTORY(../../${TARGET_NAME_UTIL}/src ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME_UTIL})
ADD_SUBDIRECTORY(../../${TARGET_NAME_PSD_READER}/src ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME_PSD_READER})
ADD_SUBDIRECTORY(../../${TARGET_NAME_MESH_GENERATOR}/src ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME_MESH_GENERATOR})
