cmake_minimum_required(VERSION 3.1)

PROJECT(PSD23D)
SET(PROJECT_VERSION_PSD_READER dev)
SET(PROJECT_VERSION_UTIL dev)

SET(LIBRARY_NAME_PSD_READER psd_reader)
SET(TARGET_NAME_PSD_READER psd2m_psd_reader)

SET(TARGET_NAME_UTIL psd2m_util)
SET(LIBRARY_NAME_UTIL util)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
ADD_SUBDIRECTORY(../src ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME_PSD_READER})
ADD_SUBDIRECTORY(../../${TARGET_NAME_UTIL}/src ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME_UTIL})